# omni_api

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci-publish.yml
docs/plans/: 2026-02-16-ollama-adapter-design.md  2026-02-16-ollama-adapter-implementation.md  2026-02-16-pypi-cicd-readme-design.md  2026-02-16-pypi-cicd-readme-implementation.md  2026-02-16-python-mvp-design.md  2026-02-16-python-mvp-implementation.md  2026-02-16-readme-design-first-design.md  2026-02-16-readme-rewrite-implementation.md
python/: README.md  pyproject.toml
python/omni_api/: __init__.py  api.py  client.py  errors.py  executor.py  plan_types.py  planner.py  validator.py
python/omni_api/adapters/: __init__.py  ollama.py
python/scripts/: run_ollama_integration.py
python/tests/: test_ambiguous_mapping_warning.py  test_client.py  test_exact_mapping.py  test_nested_leaf_mapping.py  test_ollama_adapter.py  test_ollama_integration.py  test_required_field_failure.py  test_schema_subset_validation.py  test_smoke_import.py  test_strict_output_and_drops.py  test_transform_end_to_end.py  test_transform_llm_ollama.py
src/: adapters.rs  canonical.rs  engine.rs  lib.rs  routing.rs  types.rs
