[project]
name = "omni-api"
version = "0.1.0"
description = "Deterministic payload transformer MVP"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
  { name = "Bin Zhang" },
]
keywords = ["payload", "transform", "schema", "adapter", "api"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/binzhango/omni_api"
Repository = "https://github.com/binzhango/omni_api"
Issues = "https://github.com/binzhango/omni_api/issues"

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "build>=1.2",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "integration: marks tests that require live local integrations (e.g. Ollama)",
]
